# unatica

./: .gitignore  LICENSE  README.md  TODO  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
.github/workflows/: MAINTAINING.md  release.yml  tests.yml
homebrew-tools/Formula/: unatica.rb
src/unatica/: __init__.py  cli.py  core.py
