[metadata]
name = unatica
version = 0.0.1
description = A Safe and Simple macOS App Uninstaller
long_description = file: README.md
long_description_content_type = text/markdown
author = Your Name
author_email = your.email@example.com
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Operating System :: MacOS :: MacOS 15.1
    License :: OSI Approved :: Apache License 2.0
    Development Status :: 1 - Planning

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires =
    rich>=13.7.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    unatica = unatica.cli:main
